--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
-{
+﻿{
   "name": "timetable-manager",
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "description": "Professional Timetable Management System - A modern desktop application for managing college timetables",
+  "description": "Professional Timetable Management System - A modern web application for managing college timetables",
   "author": "Your Name",
-  "main": "electron/main.cjs",
-  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "electron": "electron .",
-    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
-    "electron-build": "npm run build && electron-builder",
-    "dist": "npm run build && electron-builder --publish=never"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.45.0",
@@ -30,47 +24,12 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
-    "concurrently": "^8.2.2",
-    "electron": "^27.1.3",
-    "electron-builder": "^24.6.4",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^4.5.0",
-    "wait-on": "^7.2.0"
-  },
-  "build": {
-    "appId": "com.yourcompany.timetable-manager",
-    "productName": "Timetable Manager",
-    "directories": {
-      "output": "dist-electron"
-    },
-    "files": [
-      "dist/**/*",
-      "electron/**/*",
-      "package.json"
-    ],
-    "win": {
-      "target": "nsis",
-      "icon": "assets/icon.ico"
-    },
-    "mac": {
-      "target": "dmg",
-      "icon": "assets/icon.icns"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "assets/icon.png"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "shortcutName": "Timetable Manager"
-    }
+    "vite": "^4.5.0"
   }
 }
